9Feb UI fixes 2

--- a/src/app/ui-components/controls/modulebox/modulebox.component.scss
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.scss
@@ -79,12 +79,13 @@
 	span.module{
 		color: $pcolor2 !important;
 		font-weight: bold;
+		font-family: 'Ubuntu Mono', monospace;
 	}
 
 	span.function{
 		color: $pcolor4 !important;
 		font-weight: bold;
-
+		font-family: 'Ubuntu Mono', monospace;
 	}
 }
 
