--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
@@ -1,6 +1,7 @@
 @import '~scss/globals';
 
 .procedure-item{
+	font-family: 'Ubuntu Mono', monospace;
 	span.module{
 		color: $pcolor2 !important;
 		font-weight: bold;
