--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
@@ -6,6 +6,7 @@ div.mat-input-wrapper.mat-form-field-wrapper{
 }
 
 .viewer{
+	font-family: 'Ubuntu Mono', monospace;
 	display: flex; 
 	flex-direction: column;
 	flex-wrap: no-wrap;
@@ -68,17 +69,25 @@ div.mat-input-wrapper.mat-form-field-wrapper{
 			}*/
 			.value{
 				//padding: $default-side-padding;
+				font-family: 'Ubuntu Mono', monospace;
 				display: flex;
 				align-items: center;
-				//justify-content: flex-end;
+				justify-content: flex-end;
 				width: 80%;
+				flex-grow: 0;
+				flex-shrink:0;
 				.curr-value{
 					width: 100px;
 					textarea{
 						//height: auto !important;
+						font-family: 'Ubuntu Mono', monospace !important;
 					}
 				}
 				.slider-container{
+					display: flex;
+					flex-flow: row-reverse no-wrap;
+
+					align-items: center;
 					padding: 0 $default-side-padding;
 					width: 100%;
 					.content{
