--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -44,21 +44,16 @@
 												<!-- template for data -->
 												<div *ngIf="prod.data.getType() == 'Data'"> 
 													<div class='procedure-item'>
-														<input matInput class="tree-input" 
+														<input matInput class="tree-input" [style.width.ch]="prod.data.getLeftComponent().expression.length + 4" 
 														[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'left')" spellcheck="false" list="variable-suggestions" >
-														
 
-														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')"> -->
 														<span class="equal">=</span>
 											
-														<input matInput class="tree-input" 
+														<input matInput class="tree-input" [style.width.ch]="prod.data.getRightComponent().expression.length + 4" 
 														[(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'right')" spellcheck="false" list="variable-suggestions">
 
-														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'right')"> -->
 													</div>
 												</div>
 
@@ -70,7 +65,9 @@
 
 												<div *ngIf="prod.data.getType() == 'If'">
 													<div class='procedure-item'>
-													 <span>if</span> ( <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
+													 <span>if</span> ( <input matInput class="tree-input" 
+													 					[style.width.ch]="prod.data.getLeftComponent().expression.length + 4"  
+													 					[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'left')" spellcheck="false"> )
 													</div>
 												</div>
@@ -84,17 +81,28 @@
 												<div *ngIf="prod.data.getType() == 'For Loop'">
 													<div class='procedure-item'>
 													 <span>for (</span> 
-													  <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')" spellcheck="false">
-													 <span>in</span>  
-													  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')" spellcheck="false" list="variable-suggestions"> 
+													  
+													  <input matInput class="tree-input" 
+															[style.width.ch]="prod.data.getLeftComponent().expression.length + 4" 
+													  		[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')" spellcheck="false">
+													  
+													  <span style="margin: 0px 10px;">in</span>  
+													  
+													  <input matInput class="tree-input" 
+																[style.width.ch]="prod.data.getRightComponent().expression.length + 4" 
+													  			[(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" 
+													  			required (change)="updateProcedure($event, prod, 'right')" spellcheck="false" list="variable-suggestions"> 
 													  )
 													</div>
 												</div>
 
 												<div *ngIf="prod.data.getType() == 'Action'">
 													<div class='procedure-item'>
-														<input matInput class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')" spellcheck="false" list="variable-suggestions">
+														
+														<input matInput class="tree-input" 
+															[style.width.ch]="prod.data.getLeftComponent().expression.length + 4" 
+															[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
+															(change)="updateProcedure($event, prod, 'left')" spellcheck="false" list="variable-suggestions">
 														
 
 														<span class="equal">=</span>
@@ -105,9 +113,11 @@
 														  <span class="function">{{prod.data.getRightComponent().fn_name}}</span> 
 
 														( <span *ngIf="prod.data.getRightComponent().params.length>0">
-																<div class="param-container" 														*ngFor="let p of prod.data.getRightComponent().params; let i=index">
+																<div class="param-container" 
+																	*ngFor="let p of prod.data.getRightComponent().params; let i=index">
 																	
 																	<input matInput class="tree-input" 
+																	 [style.width.ch]="prod.data.getRightComponent().expression.length + 4" 
 																	 [(ngModel)]="prod.data.getRightComponent().params[i].value"
 																	 #ctrl="ngModel" 
 																	 required
@@ -115,10 +125,6 @@
 																	 list="variable-suggestions">
 
 																	<span *ngIf='i<prod.data.getRightComponent().params.length-1'>,</span>
-																	<!-- <input width=50 class="tree-input" [(ngModel)]="p" 
-																	 placeholder="Input something here" 
-																	 #ctrl="ngModel" required 
-																	 (change)="updateProcedure($event, prod, 'right')"> --> 
 																</div> 
 															</span>	)
 														
