--- a/src/app/ui-components/help/info-viewer/help.model.tpl.html
+++ b/src/app/ui-components/help/info-viewer/help.model.tpl.html
@@ -1,3 +1,3 @@
 <h1>About the Model</h1>
 
-<p>Officia anim eu culpa dolore dolor in fugiat laboris aliquip qui aliquip aliqua minim nostrud nostrud laborum irure aute in ex qui voluptate aliquip labore dolor tempor magna excepteur id eiusmod laboris ullamco cillum magna occaecat irure est do duis cupidatat velit ad sit ea velit labore eu ut in id elit labore ea minim pariatur do incididunt ea proident cillum ut duis officia pariatur sed laborum excepteur sint sit ad aute ut consequat ut qui in fugiat quis voluptate nulla dolore sit laborum nulla in dolore deserunt in officia eiusmod proident laborum laboris sit sed magna quis reprehenderit ad in ea aute ea velit sed tempor proident tempor elit non duis voluptate sed ut irure dolore cupidatat cillum nulla est reprehenderit nisi aute in mollit ea nisi nisi ut minim eiusmod pariatur nulla amet labore.</p>
+<p>Mobius v0.6.1</p>
