--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -111,10 +111,10 @@
 														*ngIf="!isSaved(node)">
 														<mat-icon>file_download</mat-icon>
 													</div>
-													<div class="action-button" (click)="addFunctionOutput(node_index)" 
+													<!-- <div class="action-button" (click)="addFunctionOutput(node_index)" 
 														matTooltip="Add functional output" *ngIf="!node.hasFnOutput()">
 														<mat-icon>my_library_add</mat-icon>
-													</div>
+													</div> -->
 												</div>
 											</div>
 
