--- a/src/app/gs-viewer/gs-viewer.component.html
+++ b/src/app/gs-viewer/gs-viewer.component.html
@@ -1,12 +1,14 @@
 <div id="appdiv">
 	<split direction="vertical"              
 	[gutterSize]="7" 
-	[useTransition]="true" gutterColor=white>
+	[useTransition]="true" gutterColor=white
+	>
 		<split-area [size]="90" id="splitcontainer">
 		  <div style="height: 100%">
 		    <split direction="horizontal"	
 		    [gutterSize]="7" 
-			[useTransition]="true" gutterColor=white>
+			[useTransition]="true" gutterColor=white
+			>
 		      <split-area [size]="0.5" id="splitgroups">
 		        <app-groups></app-groups>
 		      </split-area>
