--- a/src/app/gs-viewer/toolwindow/groups.component.html
+++ b/src/app/gs-viewer/toolwindow/groups.component.html
@@ -1,47 +1,16 @@
-<div id="setandgroup" >
-<mat-tab-group class="mat-tab-group">
-  <mat-tab label="Groups" >
-  	<div id="groupsview">
+<div id="groupsview">
 	<mat-accordion>
 	  <mat-expansion-panel *ngFor="let group of groups">
 	  <mat-expansion-panel-header class="mat-header">
-	    <div class="mat-header" ><label id="groupname">{{group.name}}</label></div>
+	    <div class="mat-header" ><!-- <hr/> --><label id="groupname">{{group.name}}</label><!-- <hr/> --></div>
 	  </mat-expansion-panel-header>
-	    <div class="mat-list-text-parent"><span id="parent">parent : {{group.parent}} </span></div>
-	    <div class="mat-list-text"><hr/><span (click)="selectpoint(group)">point : {{group.point}} </span></div>
-	    <div class="mat-list-text"><span >vertice : {{group.vertice}} </span></div>
-	    <div class="mat-list-text"><span >edge : {{group.edge}} </span></div>
-	    <div class="mat-list-text"><span >wire : {{group.wire}} </span></div>
-	    <div class="mat-list-text"><span >face : {{group.face}} </span></div>
-	    <div class="mat-list-text"><span >object : {{group.object}} </span><hr/></div>
+	    <div class="mat-list-text-parent"><span id="parent">PARENT : {{group.parent}} </span></div>
+	    <div class="mat-list-text"><hr/><span (click)="selectpoint(group)">POINT : {{group.point}} </span></div>
+	    <div class="mat-list-text"><span >VERTICE : {{group.vertice}} </span></div>
+	    <div class="mat-list-text"><span >EDGE : {{group.edge}} </span></div>
+	    <div class="mat-list-text"><span >WIRE : {{group.wire}} </span></div>
+	    <div class="mat-list-text"><span >FACE : {{group.face}} </span><hr/></div>
 	    <div class="mat-list-text" *ngFor="let prop of group.props"><span >{{prop[0]}} : {{prop[1]}} </span></div> 
  		</mat-expansion-panel>
 	</mat-accordion>
-	</div>
-  </mat-tab>
-  <mat-tab label="Settings" >
-  	<div id="settingview">
-  		<input id="grid" class="check" #grid type="checkbox" [checked]="gridVisible" (click)="changegrid()"> <label id="name" value="gridVisible">grid</label><br/>
-		<input id="axis" class="check" type="checkbox" [checked]="axisVisible" (click)="changeaxis()"> <label id="name" value="axisVisible">axis</label><br/>
-		<input id="shadow" class="check"  type="checkbox" [checked]="shadowVisible" (click)="changeshadow()"> <label id="name" value="shadowVisible">shadow</label><br/>
-		<input id="frame" class="check" type="checkbox" [checked]="frameVisible" (click)="changeframe()"> <label id="name" value="frameVisible">wireframe</label><br/>
-		<input id="point" class="check" type="checkbox" [checked]="pointVisible" (click)="changepoint()"> <label id="name" value="pointVisible">point</label><br/>
-		<hr/><div  id="GridCenter" >Grid Center<button (click)="getcenter()" style="margin-left: 30px;width: 40px;height: 20px; font-family: sans-serif;font-size: 12px;">Get</button></div><br/>
-		<label class="name" >XYZ</label><input type="text" name="center" id="centerx" #centerx value={{_centerx}} (change)=changecenter(centerx.value,centery.value,centerz.value)><input type="text" name="center" #centery id="centery" value={{_centery}} (change)=changecenter(centerx.value,centery.value,centerz.value)><input type="text" name="center"  #centerz id="centerz" value={{_centerz}} (change)=changecenter(centerx.value,centery.value,centerz.value)><br/>
-		<label class="name" >Size</label><input type="text" name="center"  #size id="centersize" value={{_centersize}} (change)=changecentersize(size.value)><br/>
-		<hr/><label class="name" >Precision</label><br/>
-  		<label class="name" >Line</label>&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" value={{_linepre}} #linetext (change)="changeline(linetext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value.toPrecision(2))" ></mat-slider><br/><hr/>
-  		<label class="name" >Points Size</label><br/>
-  		<label class="name" >Selected</label>&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" value={{_pointsize}} #pointtext (change)="changepointsize(pointtext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value.toPrecision(2))" ></mat-slider><br/>
-  		<label class="name" >Unelected</label>&nbsp;&nbsp;<input type="text" value=0  style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value=0 #pointsize1  ></mat-slider><br/>
-  		<hr/><label class="name" >Hemisphere Light</label>&nbsp;&nbsp;<br/>
-		<label class="name" >hue</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="text" value={{hue}} #huetext (change)="changelight(huetext.value,slider1.value,slider2.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="huerange" min=0 max=1 step=0.01  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
-		<label class="name" >saturation</label>
-		<input type="text" value={{saturation}} #satutext (change)="changelight(slider.value,satutext.value,slider2.value)" style="width: 30px; "><mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
-		<label class="name" >lightness</label>&nbsp;
-		<input type="text" value={{lightness}} #lighttext (change)="changelight(slider.value,slider1.value,lighttext.value)" style="width: 30px; "><mat-slider name="range" id="lirange" min=0 max=1 step=0.01 value={{lightness}} #slider2 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
-  	</div>
-  </mat-tab>
-</mat-tab-group>
 </div>
