--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -91,59 +91,64 @@
       <!-- <pagination-controls (pageChange)="p2 = $event"></pagination-controls> -->
     </div>
     <div *ngIf="Visible === 'Edges'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
+      <!-- <pagination-controls (pageChange)="p3 = $event"></pagination-controls> -->
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
-          <td  align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Edge ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of edge_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td> 
+          <td  align=center>Edge ID</td>
         </tr>
       </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" >
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p3 }" width="40%">
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
-          <td  id="attrib" width="180px" align=center *ngFor="let name of edge_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
+          <!-- <button id="numberbutton"[class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id) >{{datascale.id}}</button> -->
+          <button id="numberbutton" (click)=Onselect(datascale)>{{datascale}}</button>
         </tr>
       </table>
+      <!-- <pagination-controls (pageChange)="p3 = $event"></pagination-controls> -->
     </div>
     <div *ngIf="Visible === 'Wires'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
+      <!-- <pagination-controls (pageChange)="p4 = $event"></pagination-controls> -->
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
-          <td  align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Wire ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of wire_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td> 
+          <td  align=center>Wire ID</td>
         </tr>
       </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" >
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p4 }" width="40%">
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
-          <td  id="attrib" width="180px" align=center *ngFor="let name of wire_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
+          <button id="numberbutton" >{{datascale}}</button>
         </tr>
       </table>
+      <!-- <pagination-controls (pageChange)="p4 = $event"></pagination-controls> -->
     </div>
     <div *ngIf="Visible === 'Faces'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" >
+      <!-- <pagination-controls (pageChange)="p5 = $event"></pagination-controls> -->
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="60%">
         <tr>
-          <td  align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Face ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of face_name"><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td> 
+          <td  align=center width="60%">Face ID</td>
+          <!-- <td  align=center width="30%" *ngFor="let name of face_name">{{name}}</td>  -->
         </tr>
       </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" >
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p5 }" width="60%">
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
-          <td  id="attrib" width="180px" align=center *ngFor="let name of face_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
+          <button id="numberbutton" >{{datascale}}</button>
+          <!-- <td  align=center  width="50%">{{datascale.name}}</td> -->
         </tr>
       </table>
+       <!-- <pagination-controls (pageChange)="p5 = $event"></pagination-controls> -->
     </div>
     <div *ngIf="Visible === 'Objs'">
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" class="table_ojbs">
+      <!-- <pagination-controls (pageChange)="p6 = $event"></pagination-controls> -->
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="60%">
         <tr>
-          <td name="Number" align=center width="60px"><div style="width:100px;word-wrap:break-word;" >Object ID</div></td>
-          <td  align=center width="180px" *ngFor="let name of obj_name" ><div style="width:180px;word-wrap:break-word;" >{{name}}</div></td>
+          <td name="Number" align=center  align=center>Object ID</td>
+          <td  align=center width="50%" *ngFor="let name of obj_name">{{name}}</td>
         </tr>
       </table>
-      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p6 } " class="table_ojbs">
+      <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute| paginate: { itemsPerPage: 50, currentPage: p6 } " width="60%">
         <tr>
-          <td name="Number" align=center  width="60px"><div style="width:100px;word-wrap:break-word;" ><button  id="numberbutton">{{datascale.label}}</button></div></td>
-          <td  id="attrib" width="180px" align=center *ngFor="let name of obj_name; let idx=index"><div style="width:180px;word-wrap:break-word;" >{{datascale[idx]}}</div></td>
+          <button  id="numberbutton"  >{{datascale.label}}</button>
+          <td  align=center  width="50%">{{datascale.name}}</td>
         </tr>
       </table>
+      <!-- <pagination-controls (pageChange)="p6 = $event"></pagination-controls> -->
     </div>
   </div>
