--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,6 +141,9 @@ split-gutter{
 	display: inline-block;
 }
 
+tree-viewport{
+	overflow-y: hidden;
+}
 
 .angular-tree-component{
 	font-size: $fsize2 !important;
@@ -163,7 +166,7 @@ split-gutter{
 			//}
 		}
 		.full-container{
-			width: 100% !important;
+			//width: 100% !important;
 			padding: 0px !important;
 
 			border-radius: 0px;
@@ -172,19 +175,14 @@ split-gutter{
 
 			display: flex;
 			flex-flow: row nowrap!important;
-			overflow-y: hidden !important;
-			overflow-x: auto !important;
 			justify-content: space-between !important;
 
 			&:hover{
 				.seg2{
 					display: flex !important;
 					position: absolute !important;
-					right: 5px !important;
+					left: $default-side-padding !important;
 					background-color: rgba(240,191,160,1) !important;
-				}
-				.seg3{
-					visibility: visible !important;
 				}
 			}
 //			overflow-x: auto!important;
@@ -243,38 +241,6 @@ split-gutter{
 
 				flex-grow:1 !important;
 				flex-shrink:0 !important;
-				button{
-						margin: 0px !important;
-						max-width: $fsize1  !important;
-						height: $fsize1 ;
-						min-width: $fsize1  !important;
-						padding: 0px !important; 
-
-						flex-grow:0 !important;
-						flex-shrink:0 !important;
-								
-					mat-icon{
-						height: $fsize1 ;
-						vertical-align: top !important;
-						font-size: $fsize1 !important;
-						text-align: left !important
-					}
-					&:hover{
-						background-color: $color3 !important;
-						mat-icon{
-							color: $color5 !important;
-						}
-					}
-				}
-			}
-
-			.seg3{
-				visibility: hidden !important;
-				justify-content: flex-end !important;
-
-				flex-grow:0 !important;
-				flex-shrink:0 !important;
-				max-width: $fsize1 !important;
 				button{
 						margin: 0px !important;
 						max-width: $fsize1  !important;
@@ -374,10 +340,6 @@ split-gutter{
 }
 
 
-
-tree-viewport{
-	overflow:hidden !important;
-}
 
 span.addBtn{
 	padding-left: $default-side-padding !important;
