--- a/src/styles.scss
+++ b/src/styles.scss
@@ -213,7 +213,7 @@ split-gutter{
 				}
 				.tree-input{
 					min-width: 30px !important;
-					max-width: 100px !important;
+					//max-width: 100px !important;
 					
 					color: $color1 !important;
 					background-color: white;//$color3;
